# prototypical

./: .gitignore  CMakeLists.txt
libs/: CMakeLists.txt
libs/HashMap/: CMakeLists.txt  copying.c  equality.c  hashing.c  hashmap.c  internals.c  internals.h
libs/HashMap/test/: CMakeLists.txt  copying_test.c  equality_test.c  hashing_test.c  hashmap_test.c  internals_test.c  mocks.c  mocks.h
libs/inc/: hashmap.h
